# solon

./: .gitignore  CHANGELOG.md  CHANGES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
.tmp/: robustness.test.mjs  tauri-msvc-build.cmd
scripts/: bump-version.cjs  copy-spellcheck-dict.cjs  doctor.cjs  generate-brand-icon.cjs  generate-icons.cjs  kill-solon.cjs  release-prepare.cjs  release-qa.cjs  run-robustness-tests.cjs  tauri-run.cjs
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  spellcheck.rs
src/components/Brand/: SolonLogo.tsx
src/components/Canvas/: ArrowLayer.tsx  CanvasMinimap.tsx  CanvasSidePanel.tsx  CanvasToolbar.tsx  CanvasView.tsx  Card.tsx  ConnectionDots.tsx  FloatingText.tsx  ImageNode.tsx  SelectionOverlay.tsx  StrokeLayer.tsx
src/components/Editor/: CollapsibleHeadingsExtension.ts  Editor.tsx  EditorImageExtension.ts  EditorToolbar.tsx  FindBar.tsx  FindHighlightExtension.ts  HeadingNavExtension.ts  IndentExtension.ts  ListExitExtension.ts  SmartDashesExtension.ts  SpellcheckExtension.ts  WikilinkAutocomplete.tsx  WikilinkExtension.ts  markdownBridge.ts
src/components/HomePage/: HomePage.tsx  UpdateBanner.tsx
src/components/Inspector/: Inspector.tsx
src/components/Layout/: AppLayout.tsx  CommandPalette.tsx  ContextMenuLayer.tsx  ContextMenuProvider.tsx  DialogLayer.tsx  ExportDialog.tsx  GlobalSearchDialog.tsx  LocalHistoryDialog.tsx  RecoveryDialog.tsx  ReferencePane.tsx  Scratchpad.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  StatusBar.tsx  TabBar.tsx  Titlebar.tsx  ToastLayer.tsx  UpdateNotesDialog.tsx  WorkspaceHealthDialog.tsx
src/components/Outline/: Outline.tsx
src/components/Sidebar/: Sidebar.tsx  TagFilterPopover.tsx
src/hooks/: useAutoSave.ts  useCanvasPersistence.ts  useCrashRecovery.ts  useFileSystem.ts  useSceneCardSync.ts
src/lib/: atomicWrite.ts  backlinks.ts  canvas.ts  canvasGeom.ts  canvasImages.ts  canvasLinkDrag.ts  crashRecovery.ts  docxExport.ts  drag.ts  editorImages.ts  editorRef.ts  frontmatter.ts  localHistory.ts  pathSecurity.ts  pdfExport.ts  projectBackup.ts  sceneSnapshot.ts  sidebarDrop.ts  sidebarOrder.ts  snippets.ts  spellcheck-impl.ts  spellcheck.ts  spellcheck.worker.ts  tabs.ts  tagIndex.ts  updater.ts  windows.ts  workspaceHealth.ts
src/store/: useAppStore.ts  useCanvasStore.ts
src/styles/: globals.css
src/types/: canvas.ts  scene.ts  shims.d.ts
tests/: robustness.test.mjs
website/: index.html  script.js  server.cjs  styles.css
