[package]
name = "solon"
version = "0.5.6"
description = "Solon — Editor de Escrita Criativa"
authors = ["Solon"]
edition = "2021"

[lib]
name = "solon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Spellcheck nativo em Rust: HashSet pra check O(1), Levenshtein pra
# sugestoes. Tudo no backend pra evitar limite do V8 ('Too many
# properties to enumerate') que matou tentativas com nspell/typo-js.
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
